// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaTag large tag 1`] = `
<div tabindex="0" class="va-tag va-tag--large" style="color: rgb(255, 255, 255); background: rgb(0, 0, 0); box-shadow: 0 0.125rem 0.19rem 0 rgba(0,0,0,0.4);">
  <!---->
  <div class="va-tag__content"></div>
  <!---->
</div>
`;

exports[`VaTag small tag 1`] = `
<div tabindex="0" class="va-tag va-tag--small" style="color: rgb(255, 255, 255); background: rgb(0, 0, 0); box-shadow: 0 0.125rem 0.19rem 0 rgba(0,0,0,0.4);">
  <!---->
  <div class="va-tag__content"></div>
  <!---->
</div>
`;
